--- a/src/styles/quasar.variables.scss
+++ b/src/styles/quasar.variables.scss
@@ -1,7 +1,9 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
+$primary700   : #6941C6;
 $primary600   : #7F56D9;
+$primary300   : #D6BBFB;
 $primary100   : #F4EBFF;
 $primary50    : #F9F5FF;
 $blue600      : #0086C9;
@@ -13,13 +15,23 @@ $orange50     : #FFFAEB;
 $green600     : #039855;
 $green50      : #ECFDF3;
 $content800   : #1D2939;
+$content700   : #344054;
 $content900   : #101828;
+$content600   : #475467;
 $content500   : #667085;
 $content300   : #D0D5DD;
 $content400   : #98A2B3;
 $content100   : #F2F4F7;
+$content50   : #F9FAFB;
+$destructive600: #D92D20;
+$destructive700: #B32318;
 $lime      : #669F2A;
 $base-white: #FFFFFF;
-
+$yellow300: #FEC84B;
+$app-transition: ease-in-out 0.2s;
+$radius4: 4px;
+$radius8: 8px;
+$radius12: 12px;
+$radius16: 16px;
 
 @import '~quasar-variables-styl';
